# lit-LLM

./: .gitignore  README.md  pyproject.toml
notebooks/: 1.preprocess.ipynb  2.llm_architecture.ipynb  3.pretraining.ipynb  4.fine-tunning_classification.ipynb  5.fine-tunning_instructions.ipynb  instruction-data-with-response.json
src/: utils.py
utils/: GPTModel.py  load_weights.py  text_gen.py
