[tool.poetry]
name = "lit-llm"
version = "0.1.0"
description = ""
authors = ["dan1dr <dannieyo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
tiktoken = "^0.8.0"
torch = "^2.5.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
